fix user search: status/role filters and layout width jump
- Fix Role/Status filters always sending false: changed [value]="true"
  (boolean binding) to value="true" (string attribute) on mat-option
  elements so FormControl<string> comparison works correctly
- Fix page width jump when search results appear: added width:100% on
  :host to fill flex parent, switched container from centered-container
  to card-container, applied table-container mixin for overflow-x:auto
- Add 6 unit tests for search criteria building (isAdmin/isActive
  true, false, excluded)
- Add 2 E2E tests verifying correct query params sent to API
- Add mockSearchUsersWithCapture helper to E2E fixture

--- a/client/src/app/features/users/components/user-search/user-search.component.scss
+++ b/client/src/app/features/users/components/user-search/user-search.component.scss
@@ -3,8 +3,10 @@
 @use 'abstracts/functions' as func;
 
 :host {
+  width: 100%;
+
   .user-search-container {
-    @include mix.centered-container(vars.$container-max-width);
+    @include mix.card-container;
   }
 
   .search-fields {
@@ -44,6 +46,10 @@
     margin-bottom: func.rem(16);
     font-size: func.rem(48);
     opacity: 0.5;
+  }
+
+  .table-container {
+    @include mix.table-container;
   }
 
   .mat-column-id {
